mds: avoid check session connection's features when issuing caps

Session connection can be null for imported session. The fix is
recording which features client does not support in cap when cap
is newly added.

Fixes: https://tracker.ceph.com/issues/38652
Signed-off-by: "Yan, Zheng" <zyan@redhat.com>